2014-01-09  Balaji V. Iyer  <balaji.v.iyer@intel.com>

	PR c++/59631
	* gcc.dg/cilk-plus/cilk-plus.exp: Removed "-fcilkplus" from flags list.
	* g++.dg/cilk-plus/cilk-plus.exp: Likewise.
	* c-c++-common/cilk-plus/CK/spawnee_inline.c: Replaced second dg-option
	with dg-additional-options.
	* c-c++-common/cilk-plus/CK/varargs_test.c: Likewise.
	* c-c++-common/cilk-plus/CK/steal_check.c: Likewise.
	* c-c++-common/cilk-plus/CK/spawner_inline.c: Likewise.
	* c-c++-common/cilk-plus/CK/spawning_arg.c: Likewise.
	* c-c++-common/cilk-plus/CK/invalid_spawns.c: Added a dg-options tag.
	* c-c++-common/cilk-plus/CK/pr59631.c: New testcase.

2014-01-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/59715
	* gcc.dg/torture/pr59715.c: New testcase.

2014-01-09  Max Ostapenko  <m.ostapenko@partner.samsung.com>

	* c-c++-common/asan/no-asan-globals.c: New test.
	* c-c++-common/asan/no-instrument-reads.c: Likewise.
	* c-c++-common/asan/no-instrument-writes.c: Likewise.
	* c-c++-common/asan/use-after-return-1.c: Likewise.
	* c-c++-common/asan/no-use-after-return.c: Likewise.

2014-01-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/weak2.ad[sb]: New test.

2014-01-08  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/59471
	* gcc.dg/pr59471.c (foo): Avoid vector type arguments or return
	type, use pointers to vector type instead.

2014-01-08  Catherine Moore  <clm@codesourcery.com>

	* gcc.target/mips/umips-branch-3.c: New test.
	* gcc.target/mips/umips-branch-4.c: New test.

2014-01-08  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/tree-ssa/reassoc-32.c, gcc.dg/tree-ssa/reassoc-33.c,
	gcc.dg/tree-ssa/reassoc-34.c, gcc.dg/tree-ssa/reassoc-35.c,
	gcc.dg/tree-ssa/reassoc-36.c: Extend -mbranch-cost handling to MIPS.
	* gcc.dg/tree-ssa/ssa-ifcombine-ccmp-1.c,
	gcc.dg/tree-ssa/ssa-ifcombine-ccmp-4.c,
	gcc.dg/tree-ssa/ssa-ifcombine-ccmp-5.c,
	gcc.dg/tree-ssa/ssa-ifcombine-ccmp-6.c,
	gcc.dg/tree-ssa/vrp87.c, gcc.dg/tree-ssa/forwprop-28.c: Skip for MIPS.
