@@ -1037,6 +1037,16 @@ proc check_iconv_available { test_what } {
     }] $libiconv]
 }
 
+# Return true if Cilk Library is supported on the target.
+proc check_libcilkrts_available { } {
+  return [ check_no_compiler_messages_nocache libcilkrts_available executable {
+	    int main (void) { 
+		__cilkrts_set_param ("nworkers", "0");  
+		return 0; 
+	    }
+	} "-fcilkplus -lcilkrts" ]
+}
+
 # Return 1 if an ASCII locale is supported on this host, 0 otherwise.
 
 proc check_ascii_locale_available { } {
