@@ -1,5 +1,13 @@
 2014-01-09  Balaji V. Iyer  <balaji.v.iyer@intel.com>
 
+	PR testsuite/59524
+	* gcc.dg/cilk-plus/cilk-plus.exp: Make sure the cilk keywords tests
+	are run only if the Cilk library is available/enabled.
+	* g++.dg/cilk-plus/cilk-plus.exp: Likewise.
+	* lib/target-supports.exp (check_libcilkrts_available): New function.
+
+2014-01-09  Balaji V. Iyer  <balaji.v.iyer@intel.com>
+
 	PR c++/59631
 	* gcc.dg/cilk-plus/cilk-plus.exp: Removed "-fcilkplus" from flags list.
 	* g++.dg/cilk-plus/cilk-plus.exp: Likewise.
